--- a/procgen-skill-tree/package.json
+++ b/procgen-skill-tree/package.json
@@ -19,7 +19,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "lint": "eslint src/**",
+    "lintfix": "prettier src/* --write",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
