--- a/procgen-skill-tree/package.json
+++ b/procgen-skill-tree/package.json
@@ -13,6 +13,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "react-scripts build",
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "lintfix": "prettier src/* --write",
