--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,7 +26,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: ls
     - run: cd procgen-skill-tree && npm ci
-    - run: cd procgen-skill-tree && npm run build --if-present
+    - run: cd procgen-skill-tree && CI=false npm run build --if-present # set CI=false to avoid halting build on typescript warnings
     - run: cd procgen-skill-tree && npm test
     - name: Deploy
       run: |
