--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -34,7 +34,7 @@ jobs:
         git config --global user.name gha
         git config --global user.email gha
         git remote set-url origin https://${github_token}@github.com/${repository}
-        npm run build
+        CI=false npm run build
         npm run deploy
       env:
         user_name: 'github-actions[bot]'
