--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "homepage": "/procgen-skill-tree",
   "dependencies": {
+    "@types/ua-parser-js": "^0.7.35",
     "pixi.js": "^5.3.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.3",
-    "typescript": "~3.7.2"
+    "typescript": "~3.7.2",
+    "ua-parser-js": "^0.7.23"
   },
   "scripts": {
     "start": "react-scripts start",
