--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,11 +7,11 @@
     "@types/classnames": "^2.2.11",
     "@types/ua-parser-js": "^0.7.35",
     "classnames": "^2.2.6",
-    "pixi.js": "^5.3.3",
+    "pixi.js": "^5.3.6",
     "react": "^17.0.1",
-    "react-dom": "^16.13.1",
-    "react-scripts": "3.4.3",
-    "typescript": "~3.7.2",
+    "react-dom": "^17.0.1",
+    "react-scripts": "^4.0.1",
+    "typescript": "^4.1.3",
     "ua-parser-js": "^0.7.23"
   },
   "scripts": {
@@ -38,14 +38,14 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/react": "^11.2.2",
+    "@testing-library/user-event": "^12.6.0",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^14.14.14",
     "@types/pixi.js": "^5.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "gh-pages": "^3.1.0",
     "prettier": "^2.1.2"
   }
