--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "homepage": "/procgen-skill-tree",
   "dependencies": {
+    "@types/chroma-js": "^2.1.3",
     "@types/classnames": "^2.2.11",
     "@types/ua-parser-js": "^0.7.35",
+    "chroma-js": "^2.1.2",
     "classnames": "^2.2.6",
     "pixi.js": "^5.3.6",
     "react": "^17.0.1",
